--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
 					<div class="page__screen screen one">
 						<div class="screen__content _container">
 							<div class="screen__block">
-								<div class="screen__title title _anim-show" data-swiper-parallax='-50%'>2017 Bentley Mulsanne Деталі вирішують все</div>
-								<div class="screen__text _anim-show _anim-show_1" data-swiper-parallax='-50%'>Цей успіх через п’ять років підтверджує нові Bentley Mulsanne Turbo і Bentley Mulsanne Turbo R, які визнають найкращими седанами у своєму класі у світі. </div>
-								<div class="screen__footer _anim-show _anim-show_2" data-swiper-parallax='-50%'>
+								<div class="screen__title title _anim-show" data-swiper-parallax='-50%' data-swiper-parallax-opacity='0'>2017 Bentley Mulsanne Деталі вирішують все</div>
+								<div class="screen__text _anim-show _anim-show_1" data-swiper-parallax='-50%' data-swiper-parallax-opacity='0'>Цей успіх через п’ять років підтверджує нові Bentley Mulsanne Turbo і Bentley Mulsanne Turbo R, які визнають найкращими седанами у своєму класі у світі. </div>
+								<div class="screen__footer _anim-show _anim-show_2" data-swiper-parallax='-50%' data-swiper-parallax-opacity='0'>
 									<div class="screen__row">
 										<a href="#" class="screen__btn btn">Детальніше</a>
 										<a href="#" class="screen__info">Знайти дилера</a>
@@ -440,12 +440,12 @@
 							</div>
 						</div>
 						<div class="screen__body">
-							<div class="start__image _ibg"><img src="img/bg_1.jpg" alt=""></div>
+							<div class="start__image _ibg"  data-swiper-parallax='20%' data-swiper-parallax-scale='1.1'><img src="img/bg_1.jpg" alt=""></div>
 						</div>
 					</div>
 					<div class="page__screen screen models"> 
 						<div class="screen__content models__content _container  _anim-show _anim-show_100">
-							<div class="models__block models-block" data-swiper-parallax='-10%'>
+							<div class="models__block models-block" data-swiper-parallax='-10%'  data-swiper-parallax-opacity='0'>
 								<!-- Окно список -->
 								<div class="models-block__window window">
 									<div class="window__body">
@@ -546,7 +546,7 @@
 							</div>
 						</div>
 						<div class="screen__body models__body">
-							<div class="models__image _ibg"><img src="img/bg_2.jpg" alt=""></div>
+							<div class="models__image _ibg"  data-swiper-parallax='20%' data-swiper-parallax-scale='1.1'><img src="img/bg_2.jpg" alt=""></div>
 						</div>
 					</div>
 				
@@ -555,33 +555,33 @@
 						</div>
 						<!-- Оболочка Грида -->
 						<div class="screen__body">
-							<div class="accessories__body accessories-body"> 	<!--Grid-->
+							<div class="accessories__body accessories-body"  data-swiper-parallax='20%'> 	<!--Grid-->
 								<a href="#" class="accessories-body__item accessories-body__item_1 _anim-show _anim-show_scale-1">
-									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'>Для нього</div>
+									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'  data-swiper-parallax-opacity='0'>Для нього</div>
 									<div class="accessories-body__image _ibg">
 										<img src="img/Acsess/1.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="accessories-body__item accessories-body__item_2  _anim-show _anim-show_scale-1">
-									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%' data-da=".accessories-body__item_1, 479.98, 1">Для неї</div>
+									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'  data-swiper-parallax-opacity='0' data-da=".accessories-body__item_1, 479.98, 1">Для неї</div>
 									<div class="accessories-body__image _ibg">
 										<img src="img/Acsess/2.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="accessories-body__item accessories-body__item_3  _anim-show _anim-show_scale-1">
-									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%' data-da=".accessories-body__item_1, 479.98, 1">Для авто</div>
+									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'  data-swiper-parallax-opacity='0' data-da=".accessories-body__item_1, 479.98, 1">Для авто</div>
 									<div class="accessories-body__image _ibg">
 										<img src="img/Acsess/3.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="accessories-body__item accessories-body__item_4  _anim-show _anim-show_scale-1">
-									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%' data-da=".accessories-body__item_1, 479.98, 1">Для дітей</div>
+									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'  data-swiper-parallax-opacity='0' data-da=".accessories-body__item_1, 479.98, 1">Для дітей</div>
 									<div class="accessories-body__image _ibg">
 										<img src="img/Acsess/4.jpg" alt="">
 									</div>
 								</a>
 								<a href="#" class="accessories-body__item accessories-body__item_5  _anim-show _anim-show_scale-1">
-									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%' data-da=".accessories-body__item_1, 479.98, 1">Подарунки</div>
+									<div class="accessories-body__label _anim-show" data-swiper-parallax='-80%'  data-swiper-parallax-opacity='0' data-da=".accessories-body__item_1, 479.98, 1">Подарунки</div>
 									<div class="accessories-body__image _ibg">
 										<img src="img/Acsess/5.jpg" alt="">
 									</div>
@@ -592,7 +592,7 @@
 
 					<div class="page__screen screen news">
 						<div class="screen__content news__content _container">
-							<div class="news__block">
+							<div class="news__block" data-swiper-parallax='-20%' data-swiper-parallax-opacity='0'>
 								<div class="news__row">
 									<div class="news__column _anim-show _anim-show_scale">
 										<div class="news__item news-item">
@@ -662,12 +662,12 @@
 
 					<div class="page__screen screen join"> 
 						<div class="join__content _container _anim-show_100">
-							<div class="join__title title title_1" data-swiper-parallax='-20%'>Приєднуйся до клубу Bentley</div>
+							<div class="join__title title title_1" data-swiper-parallax='-20%' data-swiper-parallax-opacity='0'>Приєднуйся до клубу Bentley</div>
 						</div>
 						<!-- Оболочка Грида -->
-						<div class="screen__body">
+						<div class="screen__body" data-swiper-parallax='-20%'>
 							<div class="join__item join-item"> 	<!--Grid-->
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_1">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_1">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -681,7 +681,7 @@
 										<img src="img/Join/1.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_2">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_2">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -695,7 +695,7 @@
 										<img src="img/Join/2.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_3">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_3">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -709,7 +709,7 @@
 										<img src="img/Join/3.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_4">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_4">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -723,7 +723,7 @@
 										<img src="img/Join/4.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_5">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_5">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -737,7 +737,7 @@
 										<img src="img/Join/5.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_6">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_6">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -751,7 +751,7 @@
 										<img src="img/Join/6.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_7">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_7">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -765,7 +765,7 @@
 										<img src="img/Join/7.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_8">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_8">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -779,7 +779,7 @@
 										<img src="img/Join/8.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_9">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_9">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -793,7 +793,7 @@
 										<img src="img/Join/9.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_10">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_10">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -807,7 +807,7 @@
 										<img src="img/Join/10.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_11">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_11">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -821,7 +821,7 @@
 										<img src="img/Join/11.jpg" alt="">
 									</div>
 								</a>
-								<a href="#" data-swiper-parallax-scale='0.98' class="join-item__item join-item__item_12">
+								<a href="#" data-swiper-parallax-scale='1.1' class="join-item__item join-item__item_12">
 									<div class="join-item__icon"></div>
 									<div class="join-item__content">
 										<div class="join-item__text">Виставка “Bentley. Be Extraordibary” успішно пройшла в столиці. Команда Bentley створила захоплюючу атмосферу у центрі столиці.
@@ -840,7 +840,7 @@
 					</div>
 					<div class="page__screen screen brands">
 						<div class="brands__content">
-							<div class="brands__body" data-swiper-parallax='-5%'>
+							<div class="brands__body" data-swiper-parallax='-10%' data-swiper-parallax-opacity='0'>
 								<div class="brands__row">
 									<div class="brands__column _anim-show _anim-show_scale">
 										<div class="brands__item item-brands">
